force-app/main/default/objects/User_Permissions_Snapshot__c.object
<CustomObject>
    <description>Object to hold snapshot of a User&apos;s permissions within audit-scope.</description>
    <fields>
        <fullName>Delete_Access__c</fullName>
        <label>Delete Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insertion Order</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Snapchat Sales Team</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Ad Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Upfront Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Access__c</fullName>
        <description>Objects to which this User has Edit Access at time of Permission Snapshot generation.</description>
        <label>Edit Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insertion Order</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Snapchat Sales Team</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Ad Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Upfront Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modify_All_Access__c</fullName>
        <label>Modify All Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insertion Order</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Snapchat Sales Team</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Ad Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Upfront Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_All_Access__c</fullName>
        <label>View All Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insertion Order</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Snapchat Sales Team</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Ad Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Upfront Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_Access__c</fullName>
        <description>Objects to which this User has Read Access at the point in time this Permission Snapshot was created.</description>
        <label>Read Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insertion Order</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Snapchat Sales Team</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Ad Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Upfront Entity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Permissions__c</fullName>
        <label>System Permissions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manage Users</fullName>
                </value>
                <value>
                    <fullName>Modify All Data</fullName>
                </value>
                <value>
                    <fullName>API Enabled</fullName>
                </value>
                <value>
                    <fullName>Api Only User</fullName>
                </value>
                <value>
                    <fullName>Author Apex</fullName>
                </value>
                <value>
                    <fullName>Bulk API Hard Delete</fullName>
                </value>
                <value>
                    <fullName>Create and Customize Reports</fullName>
                </value>
                <value>
                    <fullName>Create and Upload Change Sets</fullName>
                </value>
                <value>
                    <fullName>Create AppExchange Packages</fullName>
                </value>
                <value>
                    <fullName>Deploy Change Sets</fullName>
                </value>
                <value>
                    <fullName>Download AppExchange Packages</fullName>
                </value>
                <value>
                    <fullName>Import Custom Objects</fullName>
                </value>
                <value>
                    <fullName>Is Single Sign-On Enabled</fullName>
                </value>
                <value>
                    <fullName>Manage All Private Reports and Dashboards</fullName>
                </value>
                <value>
                    <fullName>Manage Connected Apps</fullName>
                </value>
                <value>
                    <fullName>Manage Custom Permissions</fullName>
                </value>
                <value>
                    <fullName>Manage Custom Report Types</fullName>
                </value>
                <value>
                    <fullName>Manage Dashboards in Public Folders</fullName>
                </value>
                <value>
                    <fullName>Manage Data Integrations</fullName>
                </value>
                <value>
                    <fullName>Manage Flow</fullName>
                </value>
                <value>
                    <fullName>Manage Reports in Public Folders</fullName>
                </value>
                <value>
                    <fullName>Manage Session Permission Set Activations</fullName>
                </value>
                <value>
                    <fullName>Manage Two-Factor Authentication in API</fullName>
                </value>
                <value>
                    <fullName>Manage Two-Factor Authentication in User Interface</fullName>
                </value>
                <value>
                    <fullName>Modify Metadata (Beta if enabled without Modify All Data)</fullName>
                </value>
                <value>
                    <fullName>Password Never Expires</fullName>
                </value>
                <value>
                    <fullName>Report Builder</fullName>
                </value>
                <value>
                    <fullName>Report Builder (Lightning Experience)</fullName>
                </value>
                <value>
                    <fullName>Schedule Reports</fullName>
                </value>
                <value>
                    <fullName>Set Audit Fields upon Record Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Permission_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Permission Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Read_Access__c</columns>
        <columns>Edit_Access__c</columns>
        <columns>Delete_Access__c</columns>
        <columns>View_All_Access__c</columns>
        <columns>Modify_All_Access__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nick_s_Snapshots</fullName>
        <columns>NAME</columns>
        <columns>Read_Access__c</columns>
        <columns>Edit_Access__c</columns>
        <columns>Delete_Access__c</columns>
        <columns>View_All_Access__c</columns>
        <columns>Modify_All_Access__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Nick&apos;s Snapshots</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Permission Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>