force-app/main/default/objects/User_Permissions_Snapshot__c/fields/View_All__c.field-meta.xml
<CustomField>
    <fullName>View_All__c</fullName>
    <label>View All</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>